--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     </head>
 
     <body>
-        
+        <main class="main">
+            <div class="calculator">
+                <div class="screen">0
+
+                </div>
+
+                <div class="buttons-grid">
+                    <div class="btn" id="clearBtn">CLEAR</div>
+                    <div class="btn" id="deleteBtn">DELETE</div>
+                    <div class="btn btn-number">7</div>
+                    <div class="btn btn-number">8</div>
+                    <div class="btn btn-number">9</div>
+                    <div class="btn btn-operator">÷</div>
+                    <div class="btn btn-number">4</div>
+                    <div class="btn btn-number">5</div>
+                    <div class="btn btn-number">6</div>
+                    <div class="btn btn-operator">x</div>
+                    <div class="btn btn-number">1</div>
+                    <div class="btn btn-number">2</div>
+                    <div class="btn btn-number">3</div>
+                    <div class="btn btn-operator">-</div>
+                    <div class="btn" id="decimalBtn">.</div>
+                    <div class="btn btn-number">0</div>
+                    <div class="btn" id="equalsBtn">=</div>
+                    <div class="btn btn-operator">+</div>                    
+                </div>
+            </div>
+        </main>
     </body>
 </html>
