--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     <body>
         <main class="main">
             <div class="calculator">
-                <div class="screen">0
+                <div class="screen" id="display">0
 
                 </div>
 
                 <div class="buttons-grid">
-                    <div class="btn" id="clearBtn">CLEAR</div>
-                    <div class="btn" id="deleteBtn">DELETE</div>
-                    <div class="btn btn-number">7</div>
-                    <div class="btn btn-number">8</div>
-                    <div class="btn btn-number">9</div>
-                    <div class="btn btn-operator">÷</div>
-                    <div class="btn btn-number">4</div>
-                    <div class="btn btn-number">5</div>
-                    <div class="btn btn-number">6</div>
-                    <div class="btn btn-operator">x</div>
-                    <div class="btn btn-number">1</div>
-                    <div class="btn btn-number">2</div>
-                    <div class="btn btn-number">3</div>
-                    <div class="btn btn-operator">-</div>
-                    <div class="btn" id="decimalBtn">.</div>
-                    <div class="btn btn-number">0</div>
-                    <div class="btn" id="equalsBtn">=</div>
-                    <div class="btn btn-operator">+</div>                    
+                    <button class="btn btn-clear" id="clearBtn">CLEAR</button>
+                    <button class="btn btn-delete" id="deleteBtn">DELETE</button>
+                    <button class="btn btn-number">7</button>
+                    <button class="btn btn-number">8</button>
+                    <button class="btn btn-number">9</button>
+                    <button class="btn btn-operator">÷</button>
+                    <button class="btn btn-number">4</button>
+                    <button class="btn btn-number">5</button>
+                    <button class="btn btn-number">6</button>
+                    <button class="btn btn-operator">x</button>
+                    <button class="btn btn-number">1</button>
+                    <button class="btn btn-number">2</button>
+                    <button class="btn btn-number">3</button>
+                    <button class="btn btn-operator">-</button>
+                    <button class="btn btn-decimal" id="decimalBtn">.</button>
+                    <button class="btn btn-number">0</button>
+                    <button class="btn btn-equals" id="equalsBtn">=</button>
+                    <button class="btn btn-operator">+</button>                    
                 </div>
             </div>
         </main>
