--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
                 </div>
             </div>
         </main>
+        
+        <footer class="footer">Copyright © Matthew Gonzalez</footer>
     </body>
 </html>
